# graph-api

./: Cargo.toml  README.md
migrations/2023-05-27-210808_init/: down.sql  up.sql
migrations/2023-05-27-212013_add_collumn_public_to_navigations/: down.sql  up.sql
migrations/2023-05-28-003354_add_groups/: up.sql
migrations/2023-05-28-004845_add_updated_created/: up.sql
migrations/2023-05-28-021353_quit_nuleable_public_migrations/: up.sql
migrations/2023-05-28-022431_add_group_navigations/: up.sql
migrations/2023-05-28-034254_add_component_navigation/: up.sql
migrations/2023-05-28-034835_add_component_navigation_relation/: up.sql
migrations/2023-05-28-165418_add_icon_navigation/: up.sql
migrations/2023-05-28-170255_add_icon_navigation_not_null/: up.sql
migrations/2023-05-28-182910_add_order_navigations/: up.sql
migrations/2023-05-28-232448_add_password_nickname_user/: up.sql
migrations/2023-05-30-130110_add_fields_values_for_charts/: up.sql
src/: main.rs  schema.rs
src/models/: chart_field_models.rs  chart_models.rs  chart_user_models.rs  component_models.rs  field_models.rs  group_models.rs  group_navigation_models.rs  group_user_models.rs  mod.rs  navigation_models.rs  user_models.rs  user_navigation_models.rs  value_models.rs
src/models/chart/: chart_handlers.rs  chart_models.rs  mod.rs
src/models/chart_user/: chart_user_models.rs  mod.rs
src/models/group/: group_handlers.rs  mod.rs  (+1 more)
src/services/: auth_service.rs  group_service.rs  mod.rs  navigation_service.rs  user_service.rs
src/utils/: auth_utils.rs  calculation_utils.rs  mod.rs
(+22 files in other folders)
