[package]
name = "graph-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.3.1"
argon2 = "0.5.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
password-hash = "0.5.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
smartcore = {version = "0.3.2", features=["serde"]}
